--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ django-ckeditor==6.0.0
 django-crispy-forms==1.11.2
 django-js-asset==1.2.2
 django-richtextfield==1.6
+django-summernote==0.8.11.6
+Pillow==8.2.0
 pytz==2021.1
 sqlparse==0.4.1
